--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "vite-plugin-dts": "^3.9.0",
     "vitest": "^1.5.0"
   },
+  "peerDependencies": {
+    "next": "^14.2.2"
+  },
   "release": {
     "branches": [
       "main"
