Add semVer, update workflow

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/contentful/vercel-toolkit#readme",
   "devDependencies": {
     "@types/node": "^20.12.7",
+    "semantic-release": "^23.0.8",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.9.0"
