--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
   "author": "Contentful",
   "license": "MIT",
   "description": "Contentful helper SDK for Vercel platform app integration to enable live preview",
-  "source": "./src/index.ts",
+  "private": false,
   "main": "./dist/main.js",
   "module": "./dist/main.js",
-  "typings": "./dist/main.d.ts",
+  "types": "./dist/main.d.ts",
   "type": "module",
   "files": [
     "dist"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/contentful/vercel-toolit.git"
-  },
   "bugs": {
-    "url": "https://github.com/contentful/vercel-toolit/issues"
+    "url": "https://github.com/contentful/vercel-toolkit/issues"
   },
   "scripts": {
     "prepack": "npm run build",
@@ -40,6 +36,10 @@
     "branches": [
       "main"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/contentful/vercel-toolkit.git"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com",
