--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -15,8 +15,10 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      id-token: write
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      pull-requests: write # to be able to comment on released pull requests
+      id-token: write # to enable use of OIDC for npm provenance
 
     steps:
       - name: Checkout
