--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "type": "module",
   "files": [
     "dist",
-    "app-router"
+    "app-router",
+    "pages-router"
   ],
   "exports": {
     ".": {
@@ -23,6 +24,11 @@
       "import": "./dist/app-router/index.js",
       "require": "./dist/app-router/index.js",
       "types": "./dist/app-router/index.d.ts"
+    },
+    "./pages-router": {
+      "import": "./dist/pages-router/index.js",
+      "require": "./dist/pages-router/index.js",
+      "types": "./dist/pages-router/index.d.ts"
     }
   },
   "repository": {
