--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
   "peerDependencies": {
     "next": "^14.2.2"
   },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com",
     "access": "public"
