--- a/release.config.json
+++ b/release.config.json
@@ -1,11 +1,5 @@
 {
-  "branches": [
-    "main",
-    {
-      "name": "next",
-      "prerelease": true
-    }
-  ],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
