--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "./dist/main.js",
   "module": "./dist/main.js",
   "typings": "./dist/main.d.ts",
+  "type": "module",
   "files": [
     "dist",
     "app-router"
@@ -49,6 +50,11 @@
   },
   "peerDependencies": {
     "next": "^14.2.2"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com",
