fix: move config location

--- a/package.json
+++ b/package.json
@@ -48,6 +48,32 @@
     "vite-plugin-dts": "^3.9.0",
     "vitest": "^1.5.0"
   },
+  "release": {
+    "branches": [
+      "main",
+      {
+        "name": "next",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "CHANGELOG.md",
+            "package.json",
+            "package-lock.json"
+          ]
+        }
+      ],
+      "@semantic-release/github"
+    ]
+  },
   "peerDependencies": {
     "next": "^14.2.2"
   },
