--- a/package.json
+++ b/package.json
@@ -50,28 +50,7 @@
   },
   "release": {
     "branches": [
-      "main",
-      {
-        "name": "next",
-        "prerelease": true
-      }
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "CHANGELOG.md",
-            "package.json",
-            "package-lock.json"
-          ]
-        }
-      ],
-      "@semantic-release/github"
+      "main"
     ]
   },
   "peerDependencies": {
