fix: add new config file

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -14,13 +14,10 @@
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "CHANGELOG.md",
-          "package.json",
-          "package-lock.json"
-        ]
+        "assets": ["CHANGELOG.md", "package.json", "package-lock.json"]
       }
     ],
     "@semantic-release/github"
-  ]
+  ],
+  "debug": true
 }
