--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,11 +1,5 @@
 {
-  "branches": [
-    "main",
-    {
-      "name": "next",
-      "prerelease": true
-    }
-  ],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
@@ -18,6 +12,5 @@
       }
     ],
     "@semantic-release/github"
-  ],
-  "debug": true
+  ]
 }
