--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -54,6 +54,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.vault.outputs.GITHUB_PACKAGES_WRITE_TOKEN }}
 
+
+      - run: git config --list
+        env:
+          GITHUB_TOKEN: ${{ steps.vault.outputs.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ steps.vault.outputs.GITHUB_PACKAGES_WRITE_TOKEN }}
       - run: npm ci
       - run: npm run build
       - run: npm test
