--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: 'Retrieve NPM Token'
         id: vault
@@ -47,13 +48,12 @@ jobs:
           scope: '@contentful'
           always-auth: true
 
-      - name: "Create GH .npmrc"
+      - name: 'Create GH .npmrc'
         shell: bash
         run: |
           echo -e "//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}\n@contentful:registry=https://npm.pkg.github.com\nalways-auth=true" > .npmrc
         env:
           GITHUB_TOKEN: ${{ steps.vault.outputs.GITHUB_PACKAGES_WRITE_TOKEN }}
-
 
       - run: npm ci
       - run: npm run build
