--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "typings": "./dist/index.d.ts",
   "type": "module",
   "files": [ "dist" ],
+  "exports": {
+    "./app-router": {
+      "import": "./dist/app-router.js",
+      "require": "./dist/app-router.js",
+      "types": "./dist/app-router/index.d.ts"
+    },
+    "./pages-router": {
+      "import": "./dist/pages-router.js",
+      "require": "./dist/pages-router.js",
+      "types": "./dist/pages-router/index.d.ts"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/contentful/vercel-nextjs-toolkit.git"
