--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
       "require": "./dist/pages-router.cjs",
       "types": "./dist/pages-router/index.d.ts"
     },
-    "./graphql": {
-      "import": "./dist/create-fetch.js",
-      "require": "./dist/create-fetch.cjs",
+    "./experimental-graphql": {
+      "import": "./dist/graphql.js",
+      "require": "./dist/graphql.cjs",
       "types": "./dist/graphql/index.d.ts"
     }
   },
