feat: Update dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,32 @@
 ---
 version: 2
+
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: npm
-    directory: "/javascript"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: bundler
-    directory: "/ruby"
-    schedule:
-      interval: "weekly"
+- package-ecosystem: npm
+  directory: "/"
+  schedule:
+    interval: daily
+    time: "03:00"
+    timezone: UTC
+  open-pull-requests-limit: 15
+  commit-message:
+    prefix: "fix"
+    prefix-development: "chore"
+    include: "scope"
+  groups:
+    production-dependencies:
+      applies-to: version-updates
+      dependency-type: production
+      update-types:
+        - minor
+        - patch
+      patterns:
+        - '*'
+    dev-dependencies:
+      applies-to: version-updates
+      dependency-type: development
+      update-types:
+        - minor
+        - patch
+      patterns:
+        - '*'
