chore: change codeownership to team-marketplace []

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # team tundra owns all code in this repository by default
-* @contentful/team-tundra
+* @contentful/team-marketplace
 
 package.json
 package-lock.json
