--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "vitest": "^1.5.0"
   },
   "peerDependencies": {
-    "next": "^14.2.2 || ^15.1.3"
+    "next": "^14.2.2 || ^15.1.9 || ^16.0.7"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com",
